# nix-package-updater

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  dist-workspace.toml  flake.nix  rustfmt.toml
.github/workflows/: build.yaml
src/: add.rs  cache.rs  config.rs  main.rs  package.rs
src/clients/: crates.rs  github.rs  mod.rs  nix.rs  npm.rs  pypi.rs
src/nix/: ast.rs  builder.rs  mod.rs
src/updater/: cargo.rs  finder.rs  git.rs  github.rs  go.rs  mod.rs  npm.rs  platform.rs  pypi.rs  update.rs
